# BlackBox2C

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  results_v0.2.md  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
algorithm/: index.html
api/analysis/: index.html
api/cli/: index.html
api/config/: index.html
api/convert/: index.html
api/converter/: index.html
api/exporters/: index.html
benchmarks/: benchmark_classic_datasets.py  benchmark_optimization_levels.py  inspect_rf_iris_qm.py
benchmarks/results/: v0.1.md  v0.2.md
blackbox2c/: __init__.py  analysis.py  cli.py  codegen.py  codegen_bridge.py  config.py  converter.py  exporters.py  optimizer.py  surrogate.py  tree_constants.py
blackbox2c/optimizer/: __init__.py  bdd.py  extraction.py  ir.py  legacy.py  qm.py  routing.py
comparison/: index.html
docs/: algorithm.md  comparison.md  examples.md  hooks.py  index.md  quickstart.md  roadmap.md
docs/api/: analysis.md  cli.md  config.md  convert.md  converter.md  exporters.md  optimizer.md
examples/: feature_selection_example.py  index.html  iris_example.py  multi_format_export.py  temperature_regression.py
notebooks/: 01_quickstart.ipynb  02_classification_iris.ipynb  03_regression_temperature.ipynb  04_feature_analysis.ipynb  05_multi_format_export.ipynb  06_end_to_end_iot.ipynb  07_advanced_optimization.ipynb
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
tests/: README.md  __init__.py  test_analysis.py  test_cli.py  test_codegen.py  test_config.py  test_converter.py  test_exporters.py  test_optimizer.py  test_prune_negative_index_bug.py  test_regression.py  test_reproducibility.py  test_surrogate.py  test_target_param.py
tests/optimizer/: test_bdd.py  test_extraction.py  test_integration.py  test_ir.py  test_qm.py  test_routing.py  test_simplify.py
