[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox2c"
version = "0.1.0"
description = "Convert ML models to optimized code for embedded systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Axel Skrauba"}
]
keywords = [
    "machine-learning",
    "embedded-systems",
    "code-generation",
    "tinyml",
    "arduino",
    "micropython",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.scripts]
blackbox2c = "blackbox2c.cli:main"

[project.urls]
Homepage = "https://github.com/AxelSkrauba/BlackBox2C"
Documentation = "https://axelskrauba.github.io/BlackBox2C"
Repository = "https://github.com/AxelSkrauba/BlackBox2C"
"Bug Tracker" = "https://github.com/AxelSkrauba/BlackBox2C/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["blackbox2c*"]
exclude = ["tests*", "examples*", "benchmarks*", "bb2c_env*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["blackbox2c"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
